# lang-lib

./: .gitignore  CMakeLists.txt  README.md  lang.hpp  mklib.sh  mktest.sh
docs/: Documentation - Thread.md
lang/: algorithm.hpp  any.hpp  array.hpp  attribute.hpp  cluster.hpp  comparison.hpp  function.hpp  heap.hpp  int_seq.hpp  io.hpp  iterator.hpp  lang.hpp  list.hpp  matrix.hpp  memory.hpp  memory_image.hpp  misc.hpp  operand.hpp  optional.hpp  parsing.hpp  point.hpp  print.hpp  priority_queue.hpp  queue.hpp  random.hpp  seq.hpp  singleton.hpp  stack.hpp  subprocess.hpp  sys.hpp  temporal.hpp  thread.hpp  tracer.hpp  tsafe_attr.hpp  vector.hpp
lang/foundation/: __base.hpp  __basic_capture_set.hpp  __conditional_keyword.hpp  __dym_array.hpp  __meta.hpp  __ref_types.hpp  __thread_t.hpp
lang/io/: ansi_t.hpp  basic_io.hpp  basic_io.tcc  ioctl.hpp  ioctl.tcc  key_logger.hpp  key_logger.tcc  keypad.hpp  keypad.tcc
lang/memory/: allocator.hpp  allocator_traits.hpp  heap.hpp  hybrid.hpp  object_traits.hpp  pool.hpp  static_pool.hpp
lang/seq_types/: array.hpp  basic_sequence.hpp  list.hpp  sequence.hpp
lang/src/: lang_src.cpp  parsing.tcc  subprocess.tcc  sys.tcc  tracer.tcc
